// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsing statements > parsing complex valued instance definition 1`] = `
InstanceDefinitionNode {
  "attributes": {
    "default": false,
    "error": false,
  },
  "bound": BoundConstraintNode {
    "parameters": [
      NamedTypeNode {
        "name": "Maybe",
        "parameters": [
          TypeParameterNode {
            "infer": false,
            "name": "value",
          },
        ],
      },
    ],
    "trait": "Foo",
  },
  "comments": [],
  "constraints": [
    BoundConstraintNode {
      "parameters": [
        TypeParameterNode {
          "infer": false,
          "name": "value",
        },
      ],
      "trait": "Foo",
    },
  ],
  "value": NumberExpressionNode {
    "value": "3.14",
  },
}
`;

exports[`parsing statements > parsing constant definition 1`] = `
ConstantDefinitionNode {
  "attributes": {
    "unit": false,
  },
  "comments": [],
  "constraints": [
    BoundConstraintNode {
      "parameters": [
        TypeParameterNode {
          "infer": false,
          "name": "value",
        },
      ],
      "trait": "Show",
    },
  ],
  "name": "show",
  "type": FunctionTypeNode {
    "inputs": [
      TypeParameterNode {
        "infer": false,
        "name": "value",
      },
    ],
    "output": NamedTypeNode {
      "name": "Unit",
      "parameters": [],
    },
  },
}
`;

exports[`parsing statements > parsing enumeration type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "name": "Foo",
  "parameters": [],
  "representation": EnumerationTypeRepresentation {
    "variants": [
      VariantDefinition {
        "elements": [
          NamedTypeNode {
            "name": "Number",
            "parameters": [],
          },
        ],
        "name": "Some",
      },
      VariantDefinition {
        "elements": [],
        "name": "None",
      },
    ],
  },
}
`;

exports[`parsing statements > parsing generic trait definition 1`] = `
TraitDefinitionNode {
  "attributes": {},
  "comments": [],
  "constraints": [],
  "name": "Foo",
  "parameters": [
    TypeParameterNode {
      "infer": false,
      "name": "value",
    },
  ],
  "type": FunctionTypeNode {
    "inputs": [
      TypeParameterNode {
        "infer": false,
        "name": "value",
      },
    ],
    "output": NamedTypeNode {
      "name": "Number",
      "parameters": [],
    },
  },
}
`;

exports[`parsing statements > parsing generic type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "name": "Foo",
  "parameters": [
    TypeParameterNode {
      "infer": false,
      "name": "value",
    },
  ],
  "representation": MarkerTypeRepresentation {},
}
`;

exports[`parsing statements > parsing marker type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "name": "Foo",
  "parameters": [],
  "representation": MarkerTypeRepresentation {},
}
`;

exports[`parsing statements > parsing simple valued instance definition 1`] = `
InstanceDefinitionNode {
  "attributes": {
    "default": false,
    "error": false,
  },
  "bound": BoundConstraintNode {
    "parameters": [
      NamedTypeNode {
        "name": "Number",
        "parameters": [],
      },
    ],
    "trait": "Foo",
  },
  "comments": [],
  "constraints": [],
  "value": NumberExpressionNode {
    "value": "3.14",
  },
}
`;

exports[`parsing statements > parsing structure type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [],
  "name": "Foo",
  "parameters": [],
  "representation": StructureTypeRepresentation {
    "fields": [
      FieldDefinition {
        "name": "a",
        "type": NamedTypeNode {
          "name": "A",
          "parameters": [],
        },
      },
      FieldDefinition {
        "name": "b",
        "type": NamedTypeNode {
          "name": "B",
          "parameters": [],
        },
      },
    ],
  },
}
`;

exports[`parsing statements > parsing trait definition 1`] = `
TraitDefinitionNode {
  "attributes": {},
  "comments": [],
  "constraints": [],
  "name": "Foo",
  "parameters": [],
  "type": NamedTypeNode {
    "name": "Number",
    "parameters": [],
  },
}
`;

exports[`parsing statements > parsing type definition 1`] = `
TypeDefinitionNode {
  "attributes": {
    "intrinsic": false,
  },
  "comments": [
    "Documentation comment",
  ],
  "name": "Foo",
  "parameters": [],
  "representation": MarkerTypeRepresentation {},
}
`;
